--- a/lectures/overparam/overparam.tex
+++ b/lectures/overparam/overparam.tex
@@ -264,7 +264,8 @@ helpful to record the bias and variance components of its risk:
 \label{eq:ls_min_var}
 \Var_X(\hbeta) &= \frac{\sigma^2}{n} \tr (\hSigma^+ \Sigma),
 \end{align}
-which can be checked via by calculations similar to those in the underparametrized case.    
+where \smash{$\hSigma = X^\T X/n$}, which follows from calculations similar to
+those in the underparametrized case.      
 
 \section{Isotropic $\Sigma$, fixed $\beta_0$}
 
