--- a/homeworks/homework3/homework3.tex
+++ b/homeworks/homework3/homework3.tex
@@ -64,10 +64,11 @@ for a tuning parameter $\lambda > 0$.
   exactly $n+1$ of $\pm X_j$, $j=1,\dots,d$. Then one of these $n+1$ vectors, 
   denote it by $s_i X_i$ (where \smash{$s_i = \sign(\tilde\beta_i)$}) can be
   written as a linear combination of the others. Take an inner product with the
-  lasso residual and use the subgradient optimality condition to prove that the
-  coefficients in this linear combination must sum to 1, and therefore, $s_i
-  X_i$ is actually an affine combination of the others. This shows that the 
-  affine span of the $n+1$ vectors in question $(n-1)$-dimensional.  
+  lasso residual and use the subgradient optimality condition for the lasso to
+  prove that the coefficients in this linear combination must sum to 1, and
+  therefore, $s_i X_i$ is actually an affine combination of the others. Notice
+  that this shows the affine span of the $n+1$ vectors in question is
+  $(n-1)$-dimensional.     
 
 \item A refinement of Carath\'{e}odory's is as follows: given a set $C \subseteq
   \R^k$, every element in its convex hull $\conv(C)$ can be represented as a
@@ -81,20 +82,102 @@ for a tuning parameter $\lambda > 0$.
 
 \section{Variance of least squares in nonlinear feature models [15 points]} 
 
+\def\asto{\overset{\mathrm{as}}{\to}}
 \def\hSigma{\hat\Sigma}
 
 In this exercise, we will examine the variance of least squares (in the
 underparametrized regime) and min-norm least squares (in the overparametrized 
-regime) in nonlinear feature models. Recall that for a response vector $Y \in
-\R^n$ and feature matrix $X \in \R^{n \times d}$, the min-norm least squares
-\smash{$\hbeta = (X^\T X/n)^+ X^\T Y/n$} has variance (conditional on $X$): 
+regime) in nonlinear feature models. Recall for a response vector $Y \in \R^n$
+and feature matrix $X \in \R^{n \times d}$, the min-norm least squares estimator 
+\smash{$\hbeta = (X^\T X/n)^+ X^\T Y/n$} has a variance component of its
+out-of-sample prediction risk (conditional on $X$) given by:
 \begin{equation}
 \label{eq:ls_min_var}
 \Var_X(\hbeta) = \frac{\sigma^2}{n} \tr (\hSigma^+ \Sigma),
 \end{equation}
-where \smash{$\hSigma = X^\T X/n$}, and $\sigma^2 = \Var(y_i | x_i)$. 
+where \smash{$\hSigma = X^\T X/n$}, and $\sigma^2 = \Var(y_i | x_i)$. This
+reduces to \smash{$\Var_X(\hbeta) = \frac{\sigma^2}{n} \tr (\hSigma^{-1}
+  \Sigma)$} when \smash{$\hSigma$} is invertible. In lecture, we studied a
+linear feature model of the form  
+\begin{equation}
+\label{eq:linear_features}
+X = Z \Sigma^{1/2},
+\end{equation}
+for a covariance matrix $\Sigma \in \R^{d \times d}$ and a random matrix $Z \in
+\R^{n \times d}$ that has i.i.d.\ entries with mean zero and unit variance. When
+$\Sigma = I$, which we will assume throughout this homework problem, recall that
+we proved that the variance \eqref{eq:ls_min_var} satisfies, under standard
+random matrix theory conditions, as $n,d \to \infty$ and $d/n \to \gamma \in 
+(0,\infty)$, 
+\begin{equation}
+\label{eq:ls_min_var_iso_limit}
+\Var_X(\hbeta) \asto 
+\begin{cases}
+\sigma^2 \frac{\gamma}{1-\gamma} & \text{for $\gamma < 1$} \\ 
+\sigma^2 \frac{1}{\gamma-1} & \text{for $\gamma < 1$}.
+\end{cases}
+\end{equation}
+(The result for $\gamma < 1$ actually holds regardless of $\Sigma$.) Instead, we
+can consider a nonlinear feature model of the form 
+\begin{equation}
+\label{eq:nonlinear_features}
+X = \varphi(Z \Sigma^{1/2} W^\T),
+\end{equation}
+where $W \in \R^{d \times k}$ is a matrix of i.i.d.\ $N(0,1/k)$ entries, and
+$\varphi : \R \to \R$ is a nonlinear function---called the activation function
+in a neural network context---that we interpret to act elementwise on $Z
+W^\T$. 
 
-Conduct the following simulations
+There turns to be an uncanny connection between the asymptotic variance in
+linear and nonlinear feature models, which will you uncover via simulation in
+this homework problem. Attach your code as an appendix to this homework. 
+
+\begin{enumerate}[label=(\alph*)]
+\item Fix $n=200$, and let $d=[\gamma n]$ over a wide range of values for
+  $\gamma$ (make sure your range covers both $\gamma<1$ and $\gamma>1$). For
+  each $n,d$, draw $X$ from the linear feature model \eqref{eq:linear_features}
+  with $\Sigma=I$ and your choice of distribution for the entries of
+  $Z$. Compute the finite-sample variance \eqref{eq:ls_min_var}, and plot it, as
+  a function of $\gamma$, on top of the asymptotic variance curve  
+  \eqref{eq:ls_min_var_iso_limit}. To get a general idea of what this should
+  look like, refer back to Figure 2 in the overparametrization lecture notes.     
+  \marginpar{\small [3 pts]}
+
+\item For the same values of $n,d$, and $k=100$, draw $X$ from the nonlinear
+  feature model \eqref{eq:nonlinear_features}, for three different choices of
+  $\varphi$:   
+  \begin{enumerate}[label=\roman*.]
+  \item $\varphi(x) = a_1\tanh(x)$;
+  \item $\varphi(x) = a_2(x_+-b_2)$;
+  \item $\varphi(x) = a_3(|x|-b_3)$.
+  \end{enumerate}
+  Here $a_1,a_2,b_2,a_3,b_3$ are constants that you must choose to meet the 
+  standardization conditions $\E[\varphi(G)]=0$ and $\E[\varphi(G)^2]=1$, for 
+  $G \sim N(0,1)$. Produce a plot just as in part (a), with the finite-sample
+  variances for choice of each activation function plotted in a different color,
+  on top of the asymptotic variance curve \eqref{eq:ls_min_var_iso_limit} for
+  the linear model case. Comment on what you find: do the nonlinear
+  finite-sample variances lie close to the asymptotic variance for the linear
+  model case?  
+  \marginpar{\small [9 pts]}
+
+\item Now use a linear activation function $\phi(x) = ax-b$, and create a plot
+  as in part (b) with the same settings (same values of $n,d,k$, and so
+  on). What behavior do the finite-sample variances have as a function of 
+  $\gamma$? Is this surprising to you? Explain why what you are seeing is
+  happening. 
+ \marginpar{\small [3 pts]}
+
+\item As a bonus, in light of part (c), elaborate on why the results in part (b)
+  are remarkable. 
+
+\item As another (large) bonus, rerun the analysis in this entire problem but
+  with a non-isotropic covariance $\Sigma$ in \eqref{eq:linear_features},
+  \eqref{eq:nonlinear_features}. Extra bonus points if you properly recompute
+  the asymptotic variance curves. 
+\end{enumerate}
+
+
 
 \bibliographystyle{plainnat}
 \bibliography{../../common/ryantibs}
