--- a/homeworks/homework3/homework3.tex
+++ b/homeworks/homework3/homework3.tex
@@ -46,7 +46,7 @@ for a tuning parameter $\lambda > 0$.
   Carath\'{e}odory's theorem to construct a coefficient vector
   \smash{$\tilde\beta$} such that (i) the fit is the same, \smash{$X\tilde\beta
     = X\hbeta$}; (ii) the penalty is at worst the same,
-  \smash{$\|\tilde\beta\|_1 \leq \|\hbeta\|_1$}; and (iii) \smash{$\tilde\beta$}
+  \smash{$\|\tilde\beta\|_1 \leq \|\hbeta\|_1$}; and (iii) \smash{$X\tilde\beta$}
   is a nonnegative linear combination of at most $n+1$ of $\pm X_j$,
   $j=1,\dots,d$.  
  
