--- a/homeworks/homework3/homework3.tex
+++ b/homeworks/homework3/homework3.tex
@@ -180,9 +180,9 @@ this homework problem. Attach your code as an appendix to this homework.
 \section{Implicit regularization buffet: choose your dish [15 points]} 
 
 In this exercise, you get to choose between multiple options for studying
-implicit regularization. To be clear, each par (a), (b), and (c) below are worth
-equal points, and you only have to choose one (bonus points for doing more than
-one). 
+implicit regularization. To be clear, each part (a), (b), and (c) below are
+worth equal points, and you only have to choose one (bonus points for doing more
+than one). 
 
 \begin{enumerate}[label=(\alph*)]
 \item Given any response vector $Y \in \R^n$ and feature matrix $X \in \R^{n
