Explain what this RRR is NOT

--- a/lectures/ridge_resolvents/ridge_risk_resolvents.tex
+++ b/lectures/ridge_resolvents/ridge_risk_resolvents.tex
@@ -2,7 +2,7 @@
 
 \title{Supplementary Notes: RRR (Ridge Risk Resolvents)\footnote{Any connection 
 to the eponymous 2022 movie (\url{https://en.wikipedia.org/wiki/RRR_(film)}) 
-is purely coincidental!?} \\ \smallskip
+is purely coincidental!\\There is neither Rise nor Roar nor Revolt here! } \\ \smallskip
 \large Advanced Topics in Statistical Learning, Spring 2023 \\ \smallskip
 Pratik Patil}
 \author{}
