--- a/lectures/ridge/ridge.tex
+++ b/lectures/ridge/ridge.tex
@@ -188,7 +188,7 @@ can rewrite the min-norm solution (assuming that $d+D > n$ and \smash{$\tilde
 &= [X; \tau \tilde Z]^\T (XX^\T + \tau^2 \tilde Z \tilde Z^\T)^{-1} Y,  
 \end{align*}
 where in the last line we have rescaled the noise features so that each
-\smash{$\tilde Z_{ij} = \tau^{-1} Z_{ij}$} has mean zero and unit variance. If
+\smash{$\tilde Z_{ij} = \tau^{-1} Z_{ij}$} has zero mean and unit variance. If 
 we take \smash{$\tau = \sqrt{\lambda/D}$}, then by the law of large numbers, 
 \[
 \frac{\lambda}{D} \tilde Z \tilde Z^\T \asto \lambda I, \quad \text{as $D \to
@@ -244,7 +244,7 @@ $x_i \in \R^d$, $i=1,\dots,n$, are i.i.d., and importantly, each one is a
 \begin{equation}
 \label{eq:x_model}
 x_i = \Sigma^{1/2} z_i, \quad \text{where $z_i \in \R^d$ has i.i.d.\ entries
-  with mean zero, unit variance.} 
+  with zero mean, unit variance.} 
 \end{equation}
 We'll allow the feature covariance matrix $\Sigma$ to be more or less arbitrary 
 (subject to some limiting conditions, described shortly), and the distribution
@@ -360,7 +360,7 @@ generalized by many other authors, including \citet{silverstein1995strong}.
 \begin{theorem}[\citealt{marchenko1967distribution, silverstein1995strong}]
 \label{thm:mp}
 Let $X = Z \Sigma^{1/2} \in \R^{n \times d}$, where the entries of $Z$ are
-i.i.d.\ from a distribution with mean zero and unit variance. Assume that as
+i.i.d.\ from a distribution with zero mean and unit variance. Assume that as
 $n,d \to \infty$, it holds that $d/n \to \gamma \in (0,\infty)$, and the
 spectral distribution of $\Sigma$ converges weakly, \smash{$F_\Sigma \dto H$},
 where $H$ is supported on $[0,\infty)$. Then, almost surely, the spectral
@@ -425,7 +425,7 @@ rise to our sample covariance matrix \smash{$\hSigma = X^\T X/n$} (recall the
 relationship $X = Z \Sigma^{1/2}$), \emph{we get the same limit $F$} for the
 spectral distribution of \smash{$\hSigma$}. This limit only depends on $\gamma$
 and $H$. So for example, in the isotropic case, we learn that if we populate the
-entries of $X$ with i.i.d.\ standardized (mean zero, unit variance) random
+entries of $X$ with i.i.d.\ standardized (zero mean, unit variance) random
 variables, whether they be Gaussian, Bernoulli, Poisson, t, etc., and plot a
 histogram of the eigenvalues of $X^\T X/n$ for large $n$, then it is ``very
 likely'' that they will look like they follow \eqref{eq:mp_law}. See again
@@ -472,7 +472,7 @@ MP theorem.
 \begin{theorem}[\citealt{rubio2011spectral}]
 \label{thm:rubio}
 Let $X = Z \Sigma^{1/2} \in \R^{n \times d}$, where the entries of $Z$ are
-i.i.d.\ from a distribution with mean zero, unit variance, and finite $8+\eta$
+i.i.d.\ from a distribution with zero mean, unit variance, and finite $8+\eta$ 
 moment, for some $\eta>0$. Assume that as $n,d \to \infty$, the aspect ratio 
 $\gamma_n = d/n$ remains bounded away from $0$ and $\infty$, as do the
 eigenvalues of $\Sigma$. Then the resolvent of \smash{$\hSigma = X^\T X/n$} is
@@ -532,7 +532,7 @@ and variance $\sigma^2$, and $\epsilon \indep X$. To clearly lay out the
 conditions on the features $X \in \R^{n \times d}$, we assume the following: 
 \begin{itemize}
 \item[(A1)] $X = Z \Sigma^{1/2}$, where the entries of $Z \in \R^{n \times d}$
-  are i.i.d.\ with mean zero and unit variance;
+  are i.i.d.\ with zero mean and unit variance;
 \item[(A2)] the covariance matrix $\Sigma \in \R^{d \times d}$ has eigenvalues
   bounded away from $0$ and $\infty$;  
 \item[(A3)] $d/n \to \gamma \in (0,1)$ as $n,d \to \infty$,
@@ -686,7 +686,7 @@ model, but considering the full range $\gamma \in (0,\infty)$. To be specfic, we
 assume:    
 \begin{itemize}
 \item[(B1)] $X = Z \Sigma^{1/2}$, where the entries of $Z \in \R^{n \times d}$
-  are i.i.d.\ with mean zero, unit variance, and finite $8+\eta$ moment, for
+  are i.i.d.\ with zero mean, unit variance, and finite $8+\eta$ moment, for
   some $\eta>0$; 
 \item[(B2)] the covariance matrix $\Sigma \in \R^{d \times d}$ has eigenvalues
   bounded away from $0$ and $\infty$, and satisfies \smash{$F_\Sigma \dto H$},
